Atualizações de conteúdo: timeline, incentivos e dados de infraestrutura

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                         <div class="chart-container">
                             <canvas id="fiberChart"></canvas>
                         </div>
-                        <p>Rede de alta velocidade com capacidade de transmissão de dados superior a 100 Mbps, ideal para empresas de tecnologia.</p>
+                        <p>Rede de alta velocidade com capacidade de transmissão de dados superior a 100 Gbps, ideal para empresas de tecnologia.</p>
                     </div>
                     
                     <div class="data-card">
@@ -213,21 +213,21 @@
                         <div class="timeline-dot"></div>
                         <div class="timeline-content">
                             <h4>2022</h4>
-                            <p>Implementação de rede 5G e expansão do aeroporto regional</p>
-                        </div>
-                    </div>
-                    <div class="timeline-item">
-                        <div class="timeline-dot"></div>
-                        <div class="timeline-content">
-                            <h4>2024</h4>
-                            <p>Criação do Polo Tecnológico e incentivos fiscais para empresas de tecnologia</p>
+                            <p>Expansão do aeroporto regional</p>
                         </div>
                     </div>
                     <div class="timeline-item">
                         <div class="timeline-dot"></div>
                         <div class="timeline-content">
                             <h4>2025</h4>
-                            <p>Expansão do Polo e novas parcerias com instituições de ensino</p>
+                            <p>Workshop  SETIC em parceria com FIEB, SEBRAE e SENAI impulsiona o planejamento tecnológico e a captação de investimentos para Paulo Afonso.</p>
+                        </div>
+                    </div>
+                    <div class="timeline-item">
+                        <div class="timeline-dot"></div>
+                        <div class="timeline-content">
+                            <h4>2025</h4>
+                            <p>Ativação do Polo Industrial e Implantação do Curso de Ciência da Computação do IFBA</p>
                         </div>
                     </div>
                 </div>
@@ -372,21 +372,21 @@
             <div class="incentives" data-aos="fade-up">
                 <h3>Incentivos Fiscais e Benefícios</h3>
                 <div class="incentives-grid">
-                    <div class="incentive-card">
+                    <div class="incentive-card" style="display:none">
                         <div class="incentive-icon">
                             <i class="fas fa-percentage"></i>
                         </div>
                         <h4>Redução de ICMS</h4>
                         <p>Incentivos fiscais para empresas de tecnologia com redução de até 75% no ICMS</p>
                     </div>
-                    <div class="incentive-card">
+                    <div class="incentive-card" style="display:none">
                         <div class="incentive-icon">
                             <i class="fas fa-file-invoice-dollar"></i>
                         </div>
                         <h4>Isenção de ISS</h4>
                         <p>Isenção de ISS por até 10 anos para empresas que se instalarem no polo tecnológico</p>
                     </div>
-                    <div class="incentive-card">
+                    <div class="incentive-card" style="display:none">
                         <div class="incentive-icon">
                             <i class="fas fa-hand-holding-usd"></i>
                         </div>
