Ajustes visuais e atualização da timeline: altura do mapa e texto do aeroporto (2022)

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                         <div class="timeline-dot"></div>
                         <div class="timeline-content">
                             <h4>2022</h4>
-                            <p>Expansão do aeroporto regional</p>
+                            <p>Retomada da gestão pela Infraero marca nova fase de expansão do Aeroporto de Paulo Afonso.</p>
                         </div>
                     </div>
                     <div class="timeline-item">
