Ajuste no texto do card UNIRIOS nas instituições de ensino

--- a/index.html
+++ b/index.html
@@ -320,6 +320,11 @@
                         <h4>Universidade Tiradentes</h4>
                         <p>Cursos de graduação e pós-graduação em múltiplas áreas</p>
                     </div>
+                    <div class="institution-card">
+                        <div class="institution-logo">UNIRIOS</div>
+                        <h4>Centro Universitário do Rio São Francisco</h4>
+                        <p>Cursos de graduação, pós-graduação e extensão em áreas como saúde, educação, direito, engenharia e gestão.</p>
+                    </div>
                 </div>
             </div>
         </div>
